<resources>
    <string name="app_name">Shifty</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="employee">Employee</string>
    <string name="manager">Manager</string>
    <string name="register">Register</string>
    <string name="title_activity_employee">EmployeeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="payroll">Payroll</string>
    <string name="pay_staff">Pay Staff</string>
    <string name="generate_qr">Generate QR</string>
    <string name="select_date">Select Date</string>
    <string name="select_shift">Select Shift:</string>
    <string name="_9am_5pm">9am-5pm</string>
    <string name="_5pm_1am">5pm-1am</string>
    <string name="_1am_9am">1am-9am</string>
    <string name="qr_codes">QR Codes:</string>
    <string name="check_in">Check in:</string>
    <string name="check_out">Check Out:</string>
    <string name="book_shifts">Book Shifts</string>
    <string name="employee_uid">Employee UID:</string>
    <string name="time_slot">Time Slot</string>
    <string name="shift_now">Book Shift</string>
    <string name="next_book_shift">Next book shift:</string>
    <string name="shifts">Shifts</string>
    <string name="time_of_request">Time Of Request</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date</string>
    <string name="request">Request</string>
    <string name="deny">Deny</string>
    <string name="approve">Approve</string>
    <string name="loading">Loading...</string>
    <string name="employees">Employees</string>
    <string name="yes">Yes</string>
    <string name="pay">Pay</string>
    <string name="next_pay_date">Next Pay Date:</string>
</resources>