<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.bookshifts.BookShiftActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <include
            android:id="@+id/appbar"
            layout="@layout/custom_appbar_layout" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/book_shifts"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:calendarViewShown="false"
            android:datePickerMode="calendar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/employee_uid"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp_employees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/custom_spinner_background_background" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/time_slot"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:weightSum="3" >

            <TextView
                android:id="@+id/tv_9amTo5pm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/_9am_5pm"
                android:textColor="@color/color_green"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_5pmTo1am"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/_5pm_1am"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_1amTo9am"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/_1am_9am"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_shift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/shift_now"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>