<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_color"
    tools:context=".activities.authentication.RegisterActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:fontFamily="@font/roboto_medium"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/txtIAm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Type"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_medium"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/radioManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manager"
                android:textColor="@color/black"
                android:textSize="15sp"
                />
            <RadioButton
                android:id="@+id/radioEmployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                />
        </RadioGroup>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:text="@string/register"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="10dp"
                android:visibility="gone"
                android:indeterminateTint="@color/black"
                />

        </FrameLayout>
    </LinearLayout>





    </LinearLayout>
</ScrollView>